2007-11-11  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/templates.c, src/utils.c, src/utils.h:
   Remove utils_get_date() and add format argument to
   utils_get_date_time().
 * src/main.c: Don't compile plugin command line option when plugin
               support is disabled.


2007-11-08  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/prefs.c:
   Separate keybindings tree setup code from prefs_init_dialog(); use
   enum for tree model columns.
   Ask the user whether to override an existing keybinding when setting
   a combination that is already in use.
 * plugins/filebrowser.c, src/treeviews.c, src/vte.c:
   Fix popup menu item capitalization according to Gnome HIG.
   Add separator menu item to VTE popup menu.
   Move VTE Prefs item below Input Methods.
 * src/keybindings.c:
   Set Ctrl-Alt-P as default Prefs KB.
   Change Decrease Indent default KB to Ctrl-U (very common action,
   and Ctrl-U was unused).
 * src/keybindings.c:
   Allow VTE to interpret F-keys (except if they're focus commands).


2007-11-08  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/editor.c, src/utils.c, src/utils.h:
   Remove unused unnecessary function utils_btoa().


2007-11-07  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/vte.c: Apply patch from Simone Denei to add a "Restart" item to
              the VTE popup menu in case running application hangs.
 * src/utils.c: Fix bug when creating configuration directory on Unix.
 * tagmanager/tm_work_object.c, tagmanager/tm_workspace.c:
   Don't create tagmanager status file, seems to be unnecessary
   (needs testing).


2007-11-06  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/build.c: Enable stopping of Run command on Windows.
 * src/build.c: Quote first element of command line when using Compile,
                Build and Make commands on Windows to avoid problems
                if the tools are specified with full path.

